--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ profile_default/
 ipython_config.py
 
 # Remove previous ipynb_checkpoints
-#   git rm -r .ipynb_checkpoints/
+git rm -r .ipynb_checkpoints/
