--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
-/data
-/MillionSongSubset
+data/
+MillionSongSubset/
 train_triplets.txt
+*.DS_store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -19,7 +20,7 @@ profile_default/
 ipython_config.py
 
 # Remove previous ipynb_checkpoints
-git rm -r .ipynb_checkpoints/
+#git rm -r .ipynb_checkpoints/
 
 # ignore repo MSongsDB
 MSongsDB/
